Ensure responsive svgs are visible on iOS6

--- a/wp-content/themes/theinternethealthreport/src/stylesheets/organisms/_header.scss
+++ b/wp-content/themes/theinternethealthreport/src/stylesheets/organisms/_header.scss
@@ -157,6 +157,8 @@
     position: absolute;
     top: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
   }
 }
 
