--- a/wp-content/themes/theinternethealthreport/src/stylesheets/visualisations/_custom.scss
+++ b/wp-content/themes/theinternethealthreport/src/stylesheets/visualisations/_custom.scss
@@ -2,15 +2,9 @@
   &__chart {
     position: relative;
     width: 100%;
+    height: 0;
+    padding-bottom: 38.62%;
     margin-top: 2em;
-
-    &:before {
-      content: '';
-      display: block;
-      width: 100%;
-      height: 0;
-      padding-bottom: 38.62%;
-    }
 
     svg {
       position: absolute;
@@ -18,6 +12,8 @@
       right: 0;
       bottom: 0;
       left: 0;
+      width: 100%;
+      height: 100%;
     }
   }
 
